[gd_scene load_steps=10 format=3 uid="uid://dsppvd24l5goh"]

[ext_resource type="Script" path="res://Characters/Walkman/Walkman.gd" id="1_lwat0"]
[ext_resource type="PackedScene" uid="uid://btfwotlbgo786" path="res://Components/healthComponent.tscn" id="2_rs7qr"]
[ext_resource type="PackedScene" uid="uid://q6f8umok0ydy" path="res://Components/PlayerMovementComponent.tscn" id="3_b17df"]
[ext_resource type="PackedScene" uid="uid://dj1dmlygkg1r1" path="res://Components/hitboxComponent.tscn" id="3_gesee"]
[ext_resource type="PackedScene" uid="uid://cqwcfr1ltq6d5" path="res://Components/GrappleComponent.tscn" id="5_3jksh"]
[ext_resource type="PackedScene" uid="uid://de61ucdcr3x6u" path="res://Characters/Walkman/HUD/WalkmanHUD.tscn" id="5_lsa7h"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g6cv3"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_il0uy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b7xrx"]

[node name="Walkman" type="CharacterBody3D" node_paths=PackedStringArray("healthComponent", "hitboxComponent", "grappleComponent", "movementComponent", "HUD", "pivotY", "pivotX", "camera", "shotgunCast")]
script = ExtResource("1_lwat0")
healthComponent = NodePath("healthComponent")
hitboxComponent = NodePath("hitboxComponent")
grappleComponent = NodePath("pivotY/pivotX/grappleCast")
movementComponent = NodePath("PlayerMovement")
HUD = NodePath("CanvasLayer/WalkmanHUD")
pivotY = NodePath("pivotY")
pivotX = NodePath("pivotY/pivotX")
camera = NodePath("pivotY/pivotX/Camera3D")
shotgunCast = NodePath("pivotY/pivotX/shotgunCast")

[node name="collisionBox" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_g6cv3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WalkmanHUD" parent="CanvasLayer" node_paths=PackedStringArray("grappleColliding") instance=ExtResource("5_lsa7h")]
offset_top = -1.0
offset_bottom = -649.0
grappleColliding = NodePath("../../pivotY/pivotX/grappleCast")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_il0uy")

[node name="PlayerMovement" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("3_b17df")]
parent = NodePath("..")

[node name="healthComponent" parent="." instance=ExtResource("2_rs7qr")]

[node name="hitboxComponent" parent="." node_paths=PackedStringArray("healthComponent") instance=ExtResource("3_gesee")]
healthComponent = NodePath("../healthComponent")

[node name="hitbox" type="CollisionShape3D" parent="hitboxComponent"]
shape = SubResource("CapsuleShape3D_b7xrx")

[node name="pivotY" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.476831, 0)

[node name="pivotX" type="Node3D" parent="pivotY"]

[node name="grappleCast" parent="pivotY/pivotX" node_paths=PackedStringArray("parent", "HUD") instance=ExtResource("5_3jksh")]
parent = NodePath("../../..")
HUD = NodePath("../../../CanvasLayer/WalkmanHUD")

[node name="shotgunCast" type="RayCast3D" parent="pivotY/pivotX"]
target_position = Vector3(0, 0, -5)

[node name="Camera3D" type="Camera3D" parent="pivotY/pivotX"]
fov = 90.0
